# domino

./: mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  what-is-ddd.md
docs/getting-started/: first-steps.md
domino/: exceptions.py
domino/adapters/mocks/: kv.py  queue.py
domino/adapters/sql/sqlalchemy/: base.py  postgres.py
domino/base/: baseclass.py
domino/domain/: __init__.py  business_rule.py  repositories.py  service.py  services.py  uow.py
domino/domain/models/: abstract.py  dataclasses.py  pydantic.py
domino/domain/repositories/: __init__.py  base.py  mocks.py
domino/domain/services/: __init__.py  service.py
domino/domain/uow/: __init__.py  uow.py
domino/exceptions/: repositories.py  unit_of_work.py
domino/repositories/mocks/: __init__.py  kv.py
domino/repositories/sql/sqlalchemy/: __init__.py  database.py  repository.py
examples/task_domain/domain/: models.py  repositories.py  service.py  uow.py
examples/task_domain/repositories/: database.py  tasks.py
examples/test_service/domain/: models.py  repositories.py  services.py  uow.py
examples/test_with_postgres/: domain.py  repositories.py
tests/adapters/: test_postgres.py
tests/domain/: test_business_rules.py  test_service.py
tests/domain/repositories/: test_mockedKV.py
tests/domain/repositories/mocks/: test_mockedKV.py  test_mockedKVwithRelations.py
tests/domain/service/: test_service.py
tests/e2e/: test_global.py
tests/repositories/: test_mockedKV.py
tests/repositories/sql/: task_domain.py  test_postgres.py  test_sqldatabase_class.py
(+6 files in other folders)
