[tool.poetry]
name = "domino"
version = "0.1.0"
description = "A Domain-Driven Development Python Framework"
authors = ["Franck Lourme"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
autopep8 = "^2.0.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
